Production/force-app/main/default/objects/Sales_Data__c/Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Sales Data</label>
    <nameField>
        <label>Monthly Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>