Production/force-app/main/default/objects/Sales_Data__c/fields/Doses_Month_10__c.field-meta.xml
<CustomField>
    <fullName>Doses_Month_10__c</fullName>
    <label>Doses - Month 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>