Production/force-app/main/default/objects/Sales_Data__c/fields/IDSalesDataExt__c.field-meta.xml
<CustomField>
    <fullName>IDSalesDataExt__c</fullName>
    <description>Outlet/DR - Product# - ReportEndDate</description>
    <externalId>true</externalId>
    <label>IDSalesDataExt</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>