Production/force-app/main/default/objects/Sales_Data__c/fields/Sales_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category__c</fullName>
    <label>Sales Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>