Production/force-app/main/default/objects/Sales_Data__c/fields/Sales_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category_Type__c</fullName>
    <formula>CASE( Sales_Category__c , &#39;1&#39;, &#39;Direct&#39;,

&#39;2&#39;, &#39;Indirect&#39;,
&#39;3&#39;, &#39;Direct&#39;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Category Type</label>
    <type>Text</type>
</CustomField>